Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.1
-
None
-
-
86b6d852b (13.0)
Description
Summary
The `Build->Reload CMake Presets` menu option appears to have no effect
Expected Behaviour
`Build->Reload CMake Presets` should make new and updated presets available in the UI
Actual Behaviour
`Build->Reload CMake Presets` has no effect
Steps to Reproduce
1. Open the attached project. It contains one preset.
2. Edit the CMakePresets.json file and add a second preset
3. Select Build->Reload CMake Presets. Confirm the dialog if it appears
There is no change in the Configure Project UI.