CMakePM: Allow CMake peset kits refresh without configuring first

This allows the user to reload the presets kits after editing
CMakePresets.json without configuring the project first.

Fixes: QTCREATORBUG-30238
Change-Id: Id448dd8e821591f6357ec9618f114733c13a3121
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>